--- a/content/blog/part-2-batch-gradient-descent/index.mdx
+++ b/content/blog/part-2-batch-gradient-descent/index.mdx
@@ -3,7 +3,7 @@ title: 'Part 2: Batch Gradient Descent'
 type: 'blog'
 date: 2022-02-16
 published: true
-description: 'Linear Regression + Gradient Descent in Python'
+description: 'Linear Regression + Batch Gradient Descent in Python'
 tags: ['Machine Learning', 'Optimization', 'Python']
 ---
 
@@ -21,15 +21,12 @@ This is part 2 of the series on Gradient Descent.
     Part 4: Stochastic Gradient Descent
   </Link>
 
-Before we implement Gradient Descent in Python, we need to set a baseline to compare against our own implementation.
-So, we are going to train our dataset into the Linear Regression built-in function made by `scikit-learn`
-
 # Setting Up The Dataset
 
 In this example, we are going to include the [Iris Dataset](https://archive.ics.uci.edu/ml/datasets/iris) from UCI Machine Learning Repository imported from `scikit-learn`.
-There are two features in the dataset that we are going to analyse, namely `sepal_length` and `petal_width` shown in line 7 and 8.
+There are two features in the dataset that we are going to analyse, namely `sepal_length` and `petal_width` shown in the highlighted lines.
 
-```python {7-8, numberLines}
+```python {7-8}
 from sklearn.datasets import load_iris
 
 iris = load_iris()
@@ -49,6 +46,11 @@ for i in target:
     else:
     species_names.append('virginica')
 ```
+
+# Setting Up A Baseline
+
+Before we implement Batch Gradient Descent in Python, we need to set a baseline to compare against our own implementation.
+So, we are going to train our dataset into the Linear Regression built-in function made by `scikit-learn`.
 
 First, let's fit our dataset to `python:LinearRegression()` model that we imported from `python:sklearn.linear_model`.
 
@@ -102,7 +104,7 @@ The equation above is going to be our base line for this experiment to determine
 
 ![The iris dataset regression line with Scikit](./scikit-lr.png)
 
-# Implementing Gradient Descent
+# Implemetation
 
 Remember that in the first part of this series, we have customized the cost function, which is the MSE, simply by multiplying it by $\frac{1}{2}$ and named it **One Half Mean Squared Error**.
 
@@ -173,9 +175,13 @@ Here are some keypoints for Batch Gradient Descent.
 5. Since the gradients we get over time are pretty much the same, then it may stuck in a local minima. Noisy gradients would allow the algorithm to escape local minima.
 
 Since I wanted to present you an easy and succint explanation of Batch Gradient Descent, so I decided to not to include all the codes for the sake of simplicity.
-If you want to know how those graphs were generated, [click here](https://www.kaggle.com/bijonsetyawan/part-1-gradient-descent) to check the Python notebook on Kaggle.
+If you want to know how to implement it in more details, please [click here](https://www.kaggle.com/bijonsetyawan/batch-gradient-descent) to check the Python notebook on Kaggle.
 
 # References
 
 1. M. Jack. _3D Gradient Descent in Python_. Source [https://jackmckew.dev/3d-gradient-descent-in-python.html](https://jackmckew.dev/3d-gradient-descent-in-python.html)
 2. T. Arseny. _Gradient Descent From Scratch_. Source [https://towardsdatascience.com/gradient-descent-from-scratch-e8b75fa986cc](https://towardsdatascience.com/gradient-descent-from-scratch-e8b75fa986cc)
+3. O. Artem. _Stochastic, Batch, and Mini-Batch Gradient Descent_. Source [https://towardsdatascience.com/stochastic-batch-and-mini-batch-gradient-descent-demystified-8b28978f7f5](https://towardsdatascience.com/stochastic-batch-and-mini-batch-gradient-descent-demystified-8b28978f7f5)
+4. P. Sushant. _Batch, Mini Batch, and Stochastic Gradient Descent_. Source [https://towardsdatascience.com/batch-mini-batch-stochastic-gradient-descent-7a62ecba642a](https://towardsdatascience.com/batch-mini-batch-stochastic-gradient-descent-7a62ecba642a)
+5. Geeksforgeeks. _Difference between Batch Gradient Descent and Stochastic Gradient Descent_. Source [https://www.geeksforgeeks.org/difference-between-batch-gradient-descent-and-stochastic-gradient-descent/](https://www.geeksforgeeks.org/difference-between-batch-gradient-descent-and-stochastic-gradient-descent/)
+6. Sweta. _Batch, Mini Batch, and Stochastic Gradient Descent_. Source [https://sweta-nit.medium.com/batch-mini-batch-and-stochastic-gradient-descent-e9bc4cacd461](https://sweta-nit.medium.com/batch-mini-batch-and-stochastic-gradient-descent-e9bc4cacd461)
