toggle is still buggy

--- a/content/blog/what-is-the-best-learning-rate/index.mdx
+++ b/content/blog/what-is-the-best-learning-rate/index.mdx
@@ -9,3 +9,6 @@ tags: ['Python', 'Optimization']
 
 # Coming Soon
 
+# Reference
+
+1. B.Jason. _Understand the Impact of Learning Rate on Neural Network Performance_. Source [https://machinelearningmastery.com/understand-the-dynamics-of-learning-rate-on-deep-learning-neural-networks/](https://machinelearningmastery.com/understand-the-dynamics-of-learning-rate-on-deep-learning-neural-networks/)
