--- a/content/blog/what-is-the-best-learning-rate/index.mdx
+++ b/content/blog/what-is-the-best-learning-rate/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'What is the Best Learning Rate?'
 type: 'blog'
-date: 2022-02-28
-published: false
-description: 'Is the bigger learning rate better? What is the best learning rate for your model?'
+date: 2022-04-05
+published: true
+description: 'Is the bigger better? What is the best one for you?'
 tags: ['Python', 'Optimization']
 ---
 
