--- a/content/blog/part-4-stochastic-gradient-descent/index.mdx
+++ b/content/blog/part-4-stochastic-gradient-descent/index.mdx
@@ -2,7 +2,7 @@
 title: 'Part 4: Stochastic Gradient Descent'
 type: 'blog'
 date: 2022-03-30
-published: true
+published: false
 description: 'Linear Regression + another version of Gradient Descent in Python'
 tags: ['Machine Learning', 'Optimization', 'Python']
 ---
