--- a/content/blog/what-is-the-best-learning-rate/index.mdx
+++ b/content/blog/what-is-the-best-learning-rate/index.mdx
@@ -2,7 +2,7 @@
 title: 'What is the Best Learning Rate?'
 type: 'blog'
 date: 2022-04-05
-published: true
+published: false
 description: 'Is the bigger better? What is the best one for you?'
 tags: ['Python', 'Optimization']
 ---
